Add --output=vs7 argument to cpplint

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -10,6 +10,7 @@
   name: cpplint
   description: Run `cpplint` on C++ files
   language: python
+  args: [--output=vs7]
   types: [c++]
   entry: cpplint
 
