Add source license and update README.md

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,3 +1,21 @@
+# Copyright 2020 Xiaoyue Chen
+#
+# This file is part of "Useful Pre-commit Hooks" at
+#
+#     https://github.com/xiaoyuechen/useful-pre-commit-hooks.git
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 - id: clang-format
   name: clang-format
   description: Run `clang-format` on C++ files
@@ -15,7 +33,7 @@
 
 - id: cmake-format
   name: cmake-format
-  description: Run cmake-format on cmake files
+  description: Run `cmake-format` on cmake files
   args: [--in-place]
   language: python
   types: [cmake]
@@ -23,7 +41,7 @@
 
 - id: cmake-lint
   name: cmake-lint
-  description: Run cmake-lint on cmake files
+  description: Run `cmake-lint` on cmake files
   language: python
   types: [cmake]
   entry: cmake-lint
